--- a/config.json
+++ b/config.json
@@ -18,13 +18,13 @@
         "linkedin":""
     },
     "compartir":{
-        "facebook":"https://www.facebook.com/sharer/sharer.php?u=www.hmvsoluciones.com",
-        "twitter":"https://twitter.com/intent/tweet?url=www.hmvsoluciones.com&text=Te%20presento%20HMV%20Soluciones,%20profesionales%20que%20convierten%20ideas%20en%20soluciones.",
+        "facebook":"https://www.facebook.com/sharer/sharer.php?u=https://bussinesshmv.github.io/cinthia-padilla/",
+        "twitter":"https://twitter.com/intent/tweet?url=https://bussinesshmv.github.io/cinthia-padilla/&text=Te%20presento%20Cinthia%20Padilla,%20profesional%20en%20asuntos%20legales%20y%20marcas.",
         "instagram":"",
         "github":"",
-        "pinterest":"https://pinterest.com/pin/create/button/?url=www.hmvsoluciones.com&media=&description=Te%20presento%20HMV%20Soluciones,%20profesionales%20que%20convierten%20ideas%20en%20soluciones.",
-        "linkedin":"https://www.linkedin.com/shareArticle?mini=true&url=www.hmvsoluciones.com",
-        "mail":"mailto:info@example.com?&subject=&cc=&bcc=&body=www.hmvsoluciones.com%0ATe%20presento%20HMV%20Soluciones,%20profesionales%20que%20convierten%20ideas%20en%20soluciones.",
-        "whatsApp":"whatsapp://send?text=http://www.hmvsoluciones.com"
+        "pinterest":"https://pinterest.com/pin/create/button/?url=https://bussinesshmv.github.io/cinthia-padilla/&media=&description=Te%20presento%20HMV%20Soluciones,%20profesionales%20que%20convierten%20ideas%20en%20soluciones.",
+        "linkedin":"https://www.linkedin.com/shareArticle?mini=true&url=https://bussinesshmv.github.io/cinthia-padilla/",
+        "mail":"mailto:info@example.com?&subject=&cc=&bcc=&body=https://bussinesshmv.github.io/cinthia-padilla/%0ATe%20presento%20Cinthia%20Padilla,%20profesional%20en%20temas%20legales%20y%20marcas.",
+        "whatsApp":"whatsapp://send?text=https://bussinesshmv.github.io/cinthia-padilla/"
     }
 }
