--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
         "twitter":"https://twitter.com/intent/tweet?url=https://bussinesshmv.github.io/cinthia-padilla/&text=Te%20presento%20Cinthia%20Padilla,%20profesional%20en%20asuntos%20legales%20y%20marcas.",
         "instagram":"",
         "github":"",
-        "pinterest":"https://pinterest.com/pin/create/button/?url=https://bussinesshmv.github.io/cinthia-padilla/&media=&description=Te%20presento%20HMV%20Soluciones,%20profesionales%20que%20convierten%20ideas%20en%20soluciones.",
+        "pinterest":"https://pinterest.com/pin/create/button/?url=https://bussinesshmv.github.io/cinthia-padilla/&media=&description=Te%20presento%20Cinthia%20Padilla,%20profesional%20en%20asuntos%20legales%20y%20marcas.",
         "linkedin":"https://www.linkedin.com/shareArticle?mini=true&url=https://bussinesshmv.github.io/cinthia-padilla/",
         "mail":"mailto:info@example.com?&subject=&cc=&bcc=&body=https://bussinesshmv.github.io/cinthia-padilla/%0ATe%20presento%20Cinthia%20Padilla,%20profesional%20en%20temas%20legales%20y%20marcas.",
         "whatsApp":"whatsapp://send?text=https://bussinesshmv.github.io/cinthia-padilla/"
