--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "email":"cpadilla@juridicoenradio.com.mx",
     "nombre":"Lic. Cinthia Padilla Benitez",
     "puesto":"A B O G A D A",
-    "empresa":"Rangel Lascano & Asociados",
+    "empresa":"Rangel Lazcano & Asociados",
     "direccion":"Presa las V&iacute;rgenes No. 115 P.B. Col. Irrigaci&oacute;n C.P. 11500",
     "mapsFrame":"<iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.2497147039257!2d-99.20764878520028!3d19.444797545329468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d2021126bc0f5d%3A0xe02fb810496f6046!2sPresa%20Las%20V%C3%ADrgenes%20115%2C%20Col.%20Irrigaci%C3%B3n%2C%20Miguel%20Hidalgo%2C%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses-419!2smx!4v1615528640077!5m2!1ses-419!2smx' style='border:0;' allowfullscreen='' loading='lazy'></iframe>",
     "resumen":"Rangel Lazcano y Asociados es un Despacho de Abogados fundada por profesionales unidos por el valor de la experiencia y servicios, todo esto a través de asesorias exitosas.<br/>Somos expertos profesionales en diversas disciplinas complementarias, cada uno de nosotros con una particularidad en común: Excelencia corporativa global.",
